# dim

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SPECS.md  cli.py  dim  docker-compose.yml  lancer.command  pyproject.toml  requirements-dev.txt  requirements.txt  run_debug.py  run_tui.py  run_web.py
adapters/debug/: commands.py  link_scanner.py
adapters/esp32/: README.md  dim_client.ino
adapters/sync/: base.py  link_sync.py  manager.py  midi_clock.py  osc_sync.py
adapters/tui/: app.py
adapters/tui/screens/: performance.py
adapters/tui/widgets/: lane_panel.py  transport_bar.py
adapters/web/: app.py  engine.py
adapters/web/static/css/: dim.css  esp32_preview.css  performance.css
adapters/web/static/js/: editor.js  esp32_preview.js  performance.js
adapters/web/templates/: about.html  base.html  editor.html  esp32_preview.html  index.html  performance.html
core/: condition.py  models.py  playlist.py  sequencer.py  serializer.py  timing.py  validator.py
dim_pkg/: __init__.py  __main__.py
docs/: dim.service  instruction_set.md  quickstart.md  sync_protocols.md
formats/: demo_01_solo.json  demo_02_duo.json  demo_03_trio_branches.json  example_project.json
hardware/DIM_M5Unified/: DIM_M5Unified.ino  README.md  flash.sh  platformio.ini
hardware/dim_plugin/: CMakeLists.txt  build.sh
hardware/dim_plugin/src/: DIMClient.cpp  DIMClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
hardware/m5stack_core/: DIM_M5Core.ino  flash.sh  platformio.ini
hardware/m5stack_core/arduino/DIM_M5Unified/: DIM_M5Unified.ino
hardware/m5stack_core/src/: main.cpp
network/discovery/: mdns.py
network/orchestrator/: master.py
network/websocket/: client.py
tests/: test_condition.py  test_link_live.py  test_network.py  test_playlist.py  test_sequencer.py  test_serializer.py  test_sync.py  test_timing.py
